--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,9 @@
 {
-  "github": {
-    "silent": true
-  }
+  "version": 2,
+  "builds": [
+    { "src": "src/index.ts", "use": "@vercel/node" }
+  ],
+  "routes": [
+    { "src": "/.*", "dest": "dist/index.js" }
+  ]
 }
