--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/body-parser": "^1.19.2",
     "@types/express": "^4.17.17",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "@types/node":"^18.14.6"
   }
 }
